# DCQL

./: .dockerignore  .gitignore  LICENSE  README.md  docker_prepare.py  entrypoint.sh  pyproject.toml  requirements.txt  update.sh  uwsgi_config.ini
project15_nql_new/: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  entrypoint.sh  fabfile.py  pyproject.toml  pytest.ini  restore.sh  run_doi_server.sh
project15_nql_new/apps/: __init__.py
project15_nql_new/apps/account/: admin.py  notify.py  views.py
project15_nql_new/apps/analytics/: misc.py  models.py  tasks.py
project15_nql_new/apps/certificate/: admin.py  qr.py  tasks.py  urls.py  views.py
project15_nql_new/apps/image_search/: tasks.py  urls.py
project15_nql_new/apps/mge/: __init__.py  admin.py  managers.py  views.py
project15_nql_new/apps/search/: tasks.py
project15_nql_new/apps/service/: admin.py  api_v1_urls.py
project15_nql_new/apps/sso_server/: admin.py  urls.py
project15_nql_new/apps/storage/: apps.py  urls.py
project15_nql_new/apps/ticketing/: api_v1.py  api_v1_urls.py  apps.py  urls.py
project15_nql_new/docker/: bigfile.Dockerfile  install_antlr.sh  mge.Dockerfile
project15_nql_new/docker/bigfile/: bigfile.Dockerfile
project15_nql_new/mgedata/: context_processors.py  local_settings_dev_example.py  task_log.py
project15_nql_new/mgedata/generic/: data.py  template.py
project15_nql_new/mgedata/test/: testcase.py
project15_nql_new/mgedata/utils/: general.py  pagination.py
project15_nql_new/project15_nql_new/: manage.py  requirements-dev.txt  requirements.txt  test_fixture_ci.json
project15_nql_new/project15_nql_new/docker/: docker-compose-deploy.yml  docker-compose-dev.yml
project15_nql_new/project15_nql_new/docs/: conf.py  index.rst
project15_nql_new/project15_nql_new/mgedata/: celery.py  ci_settings.py  filters_and_tags.py  settings.py  urls.py  wsgi.py
project15_nql_new/scripts/: apply_default_project_subject.py  dev_init.py  matcloud.py
project15_nql_new/templates/: about.html  dashboard.html  feedback_detail.html  feedback_list.html  index.html  project.html  project_analytics.html  submit_feedback.html  update.html
(+865 files in other folders)
