[tool.poetry]
name = "mgedata"
version = "3.0.0"
description = "MGEDATA"
authors = ["Harold Chen <harold7233@hotmail.com>"]

[[tool.poetry.source]]
name = "tuna"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.4"
mongoengine = "^0.23.0"
itsdangerous = "~=1.1.0"
djangorestframework = "^3.13.1"
django-daterange-filter = "^1.3.0"
django-hardcopy = "^0.1.4"
Pillow = "^8.2.0"
qrcode = "^7.3.1"
django-oauth-toolkit = "^1.2.0"
django-cors-middleware = "^1.3.1"
pycryptodome = "^3.15.0"
pandas = "^1.4.3"
elasticsearch-dsl = "^8.0.0"
elasticsearch = "^8.0.0"
openpyxl = "^3.0.10"
patool = "^1.12"
lxml = "^4.9.1"
python-memcached = "^1.59"
django-proxy = "^1.2.1"
psycopg2-binary = "^2.8.6"
celery = "^4.0.0"
tqdm = "^4.64.1"
uwsgi = {version = "^2.0.21", platform = "linux"}
mongomock = "^4.1.2"

[tool.poetry.group.dev.dependencies]
django-silk = "^5.1.0"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"